@@ -1,5 +1,8 @@
 2014-07-15  Miklos Szeredi <miklos@szeredi.hu>
 
+	* libfuse: document deadlock avoidance for
+	fuse_notify_inval_entry() and fuse_notify_delete()
+
 	* fusermount, libfuse: send value as unsigned in "user_id=" and
 	"group_id=" options.  Uids/gids larger than 2147483647 would
 	result in EINVAL when mounting the filesystem.  This also needs a
